--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@vanilla-extract/babel-plugin": "^1.1.7",
+    "@vanilla-extract/css": "^1.7.2",
+    "@vanilla-extract/webpack-plugin": "^2.1.11",
     "gatsby": "^4.19.2",
+    "gatsby-plugin-image": "^2.19.0",
+    "gatsby-plugin-react-helmet": "^5.19.0",
+    "gatsby-plugin-sharp": "^4.19.0",
+    "gatsby-plugin-vanilla-extract": "^2.0.1",
+    "gatsby-source-filesystem": "^4.19.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
