--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vanilla-extract/webpack-plugin": "^2.1.11",
     "gatsby": "^4.19.2",
     "gatsby-plugin-image": "^2.19.0",
+    "gatsby-plugin-manifest": "^4.19.0",
     "gatsby-plugin-react-helmet": "^5.19.0",
     "gatsby-plugin-sharp": "^4.19.0",
     "gatsby-plugin-vanilla-extract": "^2.0.1",
