--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource/ubuntu": "^4.5.10",
     "@vanilla-extract/babel-plugin": "^1.1.7",
     "@vanilla-extract/css": "^1.7.2",
+    "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/webpack-plugin": "^2.1.11",
     "gatsby": "^4.19.2",
     "gatsby-plugin-image": "^2.19.0",
@@ -26,6 +28,8 @@
     "gatsby-plugin-sharp": "^4.19.0",
     "gatsby-plugin-vanilla-extract": "^2.0.1",
     "gatsby-source-filesystem": "^4.19.0",
+    "gatsby-transformer-json": "^4.19.0",
+    "gatsby-transformer-sharp": "^4.19.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0"
@@ -34,6 +38,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "typescript": "^4.7.4"
   }
 }
