--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/webpack-plugin": "^2.1.11",
     "gatsby": "^4.19.2",
+    "gatsby-plugin-gatsby-cloud": "^4.20.0",
     "gatsby-plugin-image": "^2.19.0",
     "gatsby-plugin-manifest": "^4.19.0",
     "gatsby-plugin-react-helmet": "^5.19.0",
